// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2E2E3F",
      "borderRadius": 30,
      "flexDirection": "row",
      "paddingHorizontal": 16,
    }
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={24}
    bbWidth={24}
    focusable={false}
    height={24}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {
          "flex": 0,
          "height": 24,
          "width": 24,
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
    width={24}
  >
    <RNSVGGroup>
      <RNSVGPath
        d="M16.294 14.579h-.903l-.32-.31a7.4 7.4 0 001.795-4.836 7.433 7.433 0 10-7.433 7.433c1.84 0 3.533-.675 4.837-1.796l.309.32v.904L20.296 22 22 20.296l-5.706-5.717zm-6.861 0a5.139 5.139 0 01-5.146-5.146 5.138 5.138 0 015.146-5.146 5.139 5.139 0 015.146 5.146 5.14 5.14 0 01-5.146 5.146z"
        fill={4286152085}
        fillRule={1}
        propList={
          Array [
            "fill",
            "fillRule",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <View
    style={
      Object {
        "height": 8,
        "width": 8,
      }
    }
  />
  <TextInput
    placeholder="Artist, Title, ..."
    placeholderTextColor="#797D95"
    returnKeyType="search"
    style={
      Object {
        "color": "#F1F2F4",
        "flex": 1,
        "paddingVertical": 12,
      }
    }
    testID="input"
  />
</View>
`;

exports[`renders correctly with placeholder 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2E2E3F",
      "borderRadius": 30,
      "flexDirection": "row",
      "paddingHorizontal": 16,
    }
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={24}
    bbWidth={24}
    focusable={false}
    height={24}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {
          "flex": 0,
          "height": 24,
          "width": 24,
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
    width={24}
  >
    <RNSVGGroup>
      <RNSVGPath
        d="M16.294 14.579h-.903l-.32-.31a7.4 7.4 0 001.795-4.836 7.433 7.433 0 10-7.433 7.433c1.84 0 3.533-.675 4.837-1.796l.309.32v.904L20.296 22 22 20.296l-5.706-5.717zm-6.861 0a5.139 5.139 0 01-5.146-5.146 5.138 5.138 0 015.146-5.146 5.139 5.139 0 015.146 5.146 5.14 5.14 0 01-5.146 5.146z"
        fill={4286152085}
        fillRule={1}
        propList={
          Array [
            "fill",
            "fillRule",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <View
    style={
      Object {
        "height": 8,
        "width": 8,
      }
    }
  />
  <TextInput
    placeholder="placeholder"
    placeholderTextColor="#797D95"
    returnKeyType="search"
    style={
      Object {
        "color": "#F1F2F4",
        "flex": 1,
        "paddingVertical": 12,
      }
    }
    testID="input"
  />
</View>
`;

exports[`renders correctly with value 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2E2E3F",
      "borderRadius": 30,
      "flexDirection": "row",
      "paddingHorizontal": 16,
    }
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={24}
    bbWidth={24}
    focusable={false}
    height={24}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {
          "flex": 0,
          "height": 24,
          "width": 24,
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
    width={24}
  >
    <RNSVGGroup>
      <RNSVGPath
        d="M16.294 14.579h-.903l-.32-.31a7.4 7.4 0 001.795-4.836 7.433 7.433 0 10-7.433 7.433c1.84 0 3.533-.675 4.837-1.796l.309.32v.904L20.296 22 22 20.296l-5.706-5.717zm-6.861 0a5.139 5.139 0 01-5.146-5.146 5.138 5.138 0 015.146-5.146 5.139 5.139 0 015.146 5.146 5.14 5.14 0 01-5.146 5.146z"
        fill={4286152085}
        fillRule={1}
        propList={
          Array [
            "fill",
            "fillRule",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <View
    style={
      Object {
        "height": 8,
        "width": 8,
      }
    }
  />
  <TextInput
    placeholder="Artist, Title, ..."
    placeholderTextColor="#797D95"
    returnKeyType="search"
    style={
      Object {
        "color": "#F1F2F4",
        "flex": 1,
        "paddingVertical": 12,
      }
    }
    testID="input"
    value="value"
  />
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    nativeID="animatedComponent"
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "opacity": 1,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={24}
      bbWidth={24}
      focusable={false}
      height={24}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={24}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          fill={4294046452}
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;
